Refactor AnalysisView for improved UI and code clarity
Refactored AnalysisView to modernize UI components and improve code readability. Updated listener implementations and adjusted layout parameters.